[gd_scene load_steps=4 format=3 uid="uid://dq3rmh0rq1uot"]

[ext_resource type="PackedScene" uid="uid://ccwr8m4wr2mn" path="res://Prototype_presentation_8.05.2025/pause_menu.tscn" id="1_h1tva"]
[ext_resource type="Script" uid="uid://crxl4vdyq24cl" path="res://Prototype_presentation_8.05.2025/overlab/player_select.gd" id="1_qm632"]
[ext_resource type="PackedScene" uid="uid://c4oi8rjtj0a6t" path="res://Prototype_presentation_8.05.2025/overlab/charselect.tscn" id="2_0ysgb"]

[node name="PlayerSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qm632")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0978013, 0.404612, 0.498487, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 141.0
offset_top = 50.0
offset_right = 181.0
offset_bottom = 71.0

[node name="l" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "<"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "1"

[node name="r" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = ">"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 1.0
offset_right = 297.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 34
text = "Play with friends to build GMOs!"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 35.0
offset_right = 193.0
offset_bottom = 48.0
text = "Number of player"

[node name="Buttonstart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -31.0
offset_right = 14.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "START"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 94.0
offset_right = 52.0
offset_bottom = 134.0
theme_override_constants/separation = 80

[node name="charselect1" parent="HBoxContainer2" instance=ExtResource("2_0ysgb")]
layout_mode = 2

[node name="charselect2" parent="HBoxContainer2" instance=ExtResource("2_0ysgb")]
visible = false
layout_mode = 2
player_number = 2

[node name="charselect3" parent="HBoxContainer2" instance=ExtResource("2_0ysgb")]
visible = false
layout_mode = 2
player_number = 3

[node name="charselect4" parent="HBoxContainer2" instance=ExtResource("2_0ysgb")]
visible = false
layout_mode = 2
player_number = 4

[node name="Pause_menu" parent="." instance=ExtResource("1_h1tva")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/l" to="." method="_on_l_pressed"]
[connection signal="pressed" from="HBoxContainer/r" to="." method="_on_r_pressed"]
[connection signal="pressed" from="Buttonstart" to="." method="_on_buttonstart_pressed"]
